
== Unreleased

Enhancements::

* allow page background image to be specified per layout using `+{page-layout}+` attribute reference in path (#1739)
* allow page margin for rotated page to be configured independently using `page-margin-rotated` theme key or `pdf-page-margin-rotated` document attribute (#1719)
* start page numbering and running content on empty verso page before first chapter of prepress book if `start-at` value is 0 (#2252)
* don't force page break after TOC with automatic placement in article if `title-page` attribute is set and value of `toc-break-after` theme key is `auto` (#1768)
* add `--theme` option to CLI as shorthand for `-a pdf-theme` (#2250)
* add `--sourcemap` option to CLI to enable `:sourcemap` option on processor (#2265)

Bug Fixes::

* always set `imagesdir` attribute to value of `themesdir` when resolving images from theme

Compliance::

* configure table borders in way that is compatible with prawn-table > 0.2.2

== 2.1.5 (2022-07-10) - @mojavelinux

Bug Fixes::

* fix position of background color on caption with outside margin (#2271)
* don't allow font scale to compound when entering nested table (#2276)

== 2.1.4 (2022-06-26) - @mojavelinux

Improvements::

* include source location in warning message for truncated table cell if sourcemap is enabled (#2261)

Bug Fixes::

* allow alt text for block image, video, and audio to wrap to next line on same page (#2258)
* apply text-tranform from custom role on phrase after attributes have been resolved (#2263)
* make URL check more strict so image target containing a colon is not mistaken as a URL

== 2.1.3 (2022-06-23) - @mojavelinux

Bug Fixes::

* interpret `start-at` theme keys with value `1` correctly (as `1` instead of `2`) (#2255)
* restore column layout after importing page(s) from PDF (#2253)
* fix crash when border color is transparent (`thematic-break-border-color`, `admonition-column-rule`, `quote-border-color`, `verse-border-color`)