@@ -66,7 +66,7 @@ For now, it's recommended that you specify absolute paths to future-proof your c
 
  $ asciidoctor-pdf --theme /path/to/resources/themes/basic-theme.yml -a pdf-fontsdir=/path/to/resources/fonts doc.adoc
 
-Alternately, you can prefix image paths in the theme using the `+{docdir}+` attribute reference.
+Alternately, you can prefix image paths in the theme using the `+{docdir}+` or `+{docimagesdir}+` attribute references.
 
 == Using Maven and Gradle
 
